<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MathApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_math">MathActivity</string>
    <string name="title_activity_add_game">AddGameActivity</string>
    <string name="title_activity_flash_card">FlashCardActivity</string>
    <string name="flashCardText"></string>
    <string name="title_activity_quiz_question">QuizQuestionActivity</string>
    <string name="title_activity_quiz_results">QuizResultsActivity</string>
    <string name="title_activity_lessons">Lesson</string>
    <string name="title_activity_subtraction_game">SubtractionGameActivity</string>
    <string name="activityMainDivisionButton">Division</string>
    <string name="activityMainMultiplicationButton">Multiplication</string>
    <string name="activityMainSubtractionButton">Subtraction</string>
    <string name="activityMainAdditionButton">Addition</string>
    <string name="activityFlashCardFlipButton">Flip</string>
    <string name="activityFlashCardPreviousButton">Previous</string>
    <string name="activityFlashCardNextButton">Next</string>
    <string name="activityFlashCardDefaultEquationString">4 + 4</string>
    <string name="activityMathDefaultText">Large Text</string>
    <string name="activityMathLessonButton">Lesson</string>
    <string name="activityMathGameButton">Game</string>
    <string name="activityMathFlashCardsButton">Flash Cards</string>
    <string name="activityMathQuizButton">Quiz</string>
    <string name="activityQuizQuestionDefaultText">Question Here</string>
    <string name="activityQuizQuestionAnswer0Button">Answer 0</string>
    <string name="activityQuizQuestionAnswer1Button">Answer 1</string>
    <string name="activityQuizQuestionAnswer2Button">Answer 2</string>
    <string name="activityQuizQuestionAnswer3Button">Answer 3</string>
    <string name="activityQuizResultsReturnToMenuButton">Return to Menu</string>
    <string name="fragmentDefinitionToText">To</string>
    <string name="fragmentDefinitionAddText">ADD</string>
    <string name="fragmentDefinitionMeansToText">means to:</string>
    <string name="fragmentDefinitionIncreaseButton">Increase</string>
    <string name="fragmentDefinitionTakeAwayButton">Take Away</string>
    <string name="fragmentDefinitionSeparateButton">SEPARATE</string>
    <string name="fragmentDefinitionRepeatButton">Repeat</string>
    <string name="fragmentPictureText1">If you have</string>
    <string name="fragmentPictureText2">squares</string>
    <string name="fragmentPictureDefaultNumber1">5</string>
    <string name="fragmentPictureText3">and you</string>
    <string name="fragmentPictureDerfaultOperation">ADD</string>
    <string name="fragmentPictureDefaultNumber2">3</string>
    <string name="fragmentPictureText4">more</string>
    <string name="fragmentPictureText5">How many squares are there now?</string>
    <string name="fragmentPictureEditText">ANSWER</string>
    <string name="fragmentPictureSubmitButton">SUBMIT</string>
    <string name="fragmentProblemsDefaultNumber1">0</string>
    <string name="fragmentProblemsDefaultNumber2">/3</string>
    <string name="fragmentProblemsText1">Which numbers</string>
    <string name="fragmentProblemsOperation">ADD</string>
    <string name="fragmentProblemsText2">to</string>
    <string name="fragmentProblemsDefaultNumber3">12</string>
    <string name="fragmentProblemsText3">\?</string>
    <string name="fragmentProblemsCheckBox1">4 + 4 + 4</string>
    <string name="fragmentProblemsCheckBox2">3 + 3 + 3 + 3</string>
    <string name="fragmentProblemsCheckBox3">1 + 2 + 3 + 4</string>
    <string name="fragmentProblemsCheckBox4">6 + 6</string>
    <string name="fragmentProblemsSubmitButton">SUBMIT</string>
    <string name="activityMainDifficultyLabel">Difficulty:</string>

</resources>
