<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.toomanycooksapp.mathapp.QuizQuestionActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
            android:textSize="44sp"
                    android:textColor="#DA3A3A"
                    android:text="@string/activityQuizQuestionDefaultText"
                    android:id="@+id/quizQuestion"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#224AC9"
            android:textColor="#FFFFFF"

            android:text="@string/activityQuizQuestionAnswer0Button"
            android:id="@+id/answer0"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#224AC9"
            android:textColor="#FFFFFF"
            android:text="@string/activityQuizQuestionAnswer1Button"
            android:id="@+id/answer1"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#224AC9"
            android:textColor="#FFFFFF"
            android:text="@string/activityQuizQuestionAnswer2Button"
            android:id="@+id/answer2"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#224AC9"
            android:textColor="#FFFFFF"
            android:text="@string/activityQuizQuestionAnswer3Button"
            android:id="@+id/answer3"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

    </LinearLayout>


</RelativeLayout>
