<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:showDividers="middle|beginning">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activityMainDifficultyLabel"
                android:id="@+id/textView2"
                android:paddingRight="10dp"
                android:textSize="40sp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/difficultySpinner"
                android:spinnerMode="dialog"
                android:textAlignment="center"
                android:textSize="40sp"
                android:entries="@array/activityMainDifficultySpinnerItems"
                android:layout_marginBottom="10sp" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/additionButton"
            android:layout_marginTop="5dp"
            android:textColor="#FFFFFF"
            android:background="#224AC9"
            android:text="@string/activityMainAdditionButton"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:textSize="40sp"
            android:onClick="onClick"
            android:textAllCaps="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subtractionButton"
            android:background="#224AC9"
            android:textColor="#FFFFFF"
            android:layout_marginTop="5dp"
            android:text="@string/activityMainSubtractionButton"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:textSize="40sp"
            android:textAllCaps="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/multiplicationButton"
            android:background="#224AC9"
            android:textColor="#FFFFFF"
            android:layout_marginTop="5dp"
            android:text="@string/activityMainMultiplicationButton"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:textSize="40sp"
            android:textAllCaps="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/divisionButton"
            android:layout_marginTop="5dp"
            android:textColor="#FFFFFF"
            android:background="#224AC9"
            android:text="@string/activityMainDivisionButton"
            android:layout_weight="1"
            android:singleLine="false"
            android:layout_marginBottom="5dp"
            android:textSize="40sp"
            android:textAllCaps="true" />
    </LinearLayout>
</RelativeLayout>
