<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.toomanycooksapp.mathapp.LessonActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#DA3A3A"
            android:id="@+id/lessonText"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/activityMathDefaultText"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/activityMathLessonButton"
            android:id="@+id/lessonButton"
            android:textColor="#FFFFFF"
            android:background="#224AC9"
            android:layout_below="@id/lessonText"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@id/lessonText"
            android:layout_alignEnd="@id/lessonText"
            android:layout_weight="1"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/activityMathGameButton"
            android:id="@+id/gameButton"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/lessonButton"
            android:textColor="#FFFFFF"
            android:background="#224AC9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/lessonButton"
            android:layout_alignEnd="@+id/lessonButton"
            android:layout_weight="1"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/activityMathFlashCardsButton"
            android:id="@+id/fcButton"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/gameButton"
            android:textColor="#FFFFFF"
            android:background="#224AC9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/gameButton"
            android:layout_alignEnd="@+id/gameButton"
            android:layout_weight="1"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/activityMathQuizButton"
            android:id="@+id/quizButton"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/fcButton"
            android:textColor="#FFFFFF"
            android:background="#224AC9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/fcButton"
            android:layout_alignEnd="@+id/fcButton"
            android:layout_weight="1"
            android:layout_marginBottom="5dp" />
    </LinearLayout>

</RelativeLayout>
