<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/fragmentPictureText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/problem_root"
                android:textColor="#DA3A3A"
                android:textSize="28sp"
                android:textStyle="bold"
                android:paddingRight="5dp"
                android:paddingLeft="5dp" />

            <TextView
                android:id="@+id/picture_x"
                android:layout_width="wrap_content"
                android:textColor="#913AC9"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/fragmentPictureDefaultNumber1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/picture_lable"
                android:textColor="#DA3A3A"
                android:textSize="28sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/picture_x_layout"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"></LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/fragmentPictureText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/picture_root2"
                android:textColor="#DA3A3A"
                android:textSize="28sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <TextView
                android:text="@string/fragmentPictureDerfaultOperation"
                android:id="@+id/picture_subject"
                android:layout_width="wrap_content"
                android:textColor="#913AC9"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/picture_into"
                android:textColor="#DA3A3A"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:text="@string/fragmentPictureDefaultNumber2"
                android:id="@+id/picture_y"
                android:layout_width="wrap_content"
                android:textColor="#913AC9"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/picture_lable2"
                android:textColor="#DA3A3A"
                android:textSize="28sp"
                android:textStyle="bold"
                android:paddingRight="5dp"
                android:paddingLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/picture_y_layout"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"></LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/fragmentPictureText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/picture_question"
                android:paddingLeft="5dp"
                android:textColor="#DA3A3A"
                android:textSize="28sp"
                android:textStyle="bold"
                android:paddingTop="5dp"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:hint="@string/fragmentPictureEditText"
                android:id="@+id/picture_answer"
                android:textColorHint="#913AC9"
                android:textColor="#913AC9"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/picture_submit"
                android:textColor="#FFFFFF"
                android:inputType="number"
                android:onClick="onClick"
                android:text="@string/fragmentPictureSubmitButton"
                android:textSize="20sp"
                android:background="#224AC9"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>